--- a/complete_authentication/ios/Runner/GoogleService-Info.plist
+++ b/complete_authentication/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyDrycyu6O-_h8esg9FGe6fCbXLu0zPhbEo</string>
+	<string>Private</string>
 	<key>GCM_SENDER_ID</key>
-	<string>164306165639</string>
+	<string>Private</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.completeauthentication</string>
+	<string>Private</string>
 	<key>PROJECT_ID</key>
-	<string>fluttermvvmauth</string>
+	<string>Private</string>
 	<key>STORAGE_BUCKET</key>
-	<string>fluttermvvmauth.firebasestorage.app</string>
+	<string>Private</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:164306165639:ios:e4088f765dd1f615cebd22</string>
+	<string>Private</string>
 </dict>
 </plist>
